@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023 IBM Corporation and others.
+ * Copyright (c) 2023,2024 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -9,6 +9,7 @@
  *******************************************************************************/
 package test.web;
 
+import java.net.InetAddress;
 import java.util.Properties;
 
 import javax.naming.Context;
@@ -34,8 +35,12 @@ public class IllegalAccessTestServlet extends FATServlet {
             env.put(Context.PROVIDER_URL, "dns:");
             InitialDirContext dirContext = new InitialDirContext(env);
 
-            // This will cause an illegalAccessException FFDC if the proper entry is not in the java9.options file.
-            Attributes attrs = dirContext.getAttributes("dns:/www.github.com");
+            // This will cause an illegalAccessException FFDC if the following entry is not in the java9.options file:
+            // --add-exports
+            // jdk.naming.dns/com.sun.jndi.url.dns=ALL-UNNAMED
+            // 
+            // Attempt a DNS lookup of the local host name using the underlying machine's DNS config
+            Attributes attrs = dirContext.getAttributes("dns:/" + InetAddress.getLocalHost().getHostName());
         } catch (NameNotFoundException nnfe) { // dirContext.getAttributes may throw a NameNotFoundException, it can be ignored
             // Ignore
         }
